--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <body>
   this is the body
 <a href="about.html"> about us</a>
+<div>
+ <img src="GrXE37YN9GSr8mjbYOOdujwYwoRvbJs3veZG.mp4"
+  alt="lord shiva">
 </body>
 
 </html>
